# My_filer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  __next.__PAGE__.txt  __next._tree.txt  alembic.ini  docker-compose.yml  index.html  index.txt  railway.json
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_chat_tables.py  0004_identity_consent.py  0005_filing_submission.py  0006_yearly_facts.py  0007_filing_tax_kind.py  0008_fact_embeddings.py  0009_cac_records.py
apps/api/app/: __init__.py  celery_app.py  config.py  main.py
apps/api/tests/: conftest.py  test_celery_pipeline.py  test_chat_endpoint.py  test_cit.py  test_corporate_filing.py  test_db_url.py  test_documents_endpoint.py  test_drift.py  test_extractor.py  test_filing_audit.py  test_filing_pdf.py  test_filing_serialize.py  test_filings_endpoint.py  test_gateway_client.py  test_gateway_errors.py  test_gateway_jwt.py  test_gateway_service.py  test_gateway_signing.py  test_gateway_timestamps.py  test_health.py  test_i18n.py  test_identity_cac.py  test_identity_dojah.py  test_identity_endpoint.py  test_identity_name_match.py  test_identity_service.py  test_identity_vault.py  test_memory_anomalies.py  test_memory_embeddings.py  test_memory_endpoint.py  test_memory_facts.py  test_memory_nudges.py  test_memory_recall.py  test_memory_vector_recall.py  test_ngo_audit.py  test_ngo_endpoint.py  test_ngo_serialize.py  test_observability.py  test_paye.py  test_pit.py  (+9 more)
(+205 files in other folders)
